--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "forgetti-loader",
   "version": "0.0.0",
   "description": "A webpack loader that solves your hook spaghetti. Inspired by React Forget. Powered by forgetti.",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
   "files": [
     "dist"
   ],
@@ -30,8 +30,20 @@
     "@babel/core": "^7.21.4"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.20.0",
+    "@types/node": "^18.15.13",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.39.0",
+    "eslint-config-sukka": "^1.8.5",
     "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5"
+    "eslint-plugin-import": "^2.27.5",
+    "forgetti": "^0.4.2",
+    "rollup": "^3.20.7",
+    "rollup-plugin-swc3": "^0.8.1",
+    "webpack": "^5.80.0"
+  },
+  "peerDependencies": {
+    "forgetti": "0.3.0"
   }
 }
