--- a/package.json
+++ b/package.json
@@ -2,11 +2,23 @@
   "name": "forgetti-loader",
   "version": "0.0.0",
   "description": "A webpack loader that solves your hook spaghetti. Inspired by React Forget. Powered by forgetti.",
-  "main": "dist/index.cjs",
   "files": [
     "dist"
   ],
+  "types": "./dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "module": "./dist/index.m.js",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.js"
+    }
+  },
   "scripts": {
+    "build": "rollup -c rollup.config.ts --configPlugin swc3 --bundleConfigAsCjs",
     "prepublishOnly": "npm run build"
   },
   "repository": {
@@ -30,6 +42,7 @@
     "@babel/core": "^7.21.4"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.53",
     "@types/babel__core": "^7.20.0",
     "@types/node": "^18.15.13",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -40,10 +53,14 @@
     "eslint-plugin-import": "^2.27.5",
     "forgetti": "^0.4.2",
     "rollup": "^3.20.7",
+    "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-swc3": "^0.8.1",
     "webpack": "^5.80.0"
   },
   "peerDependencies": {
-    "forgetti": "0.3.0"
+    "forgetti": "0.4.2"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
