--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,14 @@
           "./tsconfig.json"
         ]
       }
+    },
+    {
+      "files": ["test/fixtures/*.jsx"],
+      "extends": "sukka/react",
+      "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+      }
     }
   ],
   "ignorePatterns": [
