--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "scripts": {
     "build": "rollup -c rollup.config.ts --configPlugin swc3 --bundleConfigAsCjs",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "pretest": "npm run build",
+    "test": "mocha -r @swc-node/register 'test/index.ts'"
   },
   "repository": {
     "type": "git",
@@ -42,19 +44,30 @@
     "@babel/core": "^7.21.4"
   },
   "devDependencies": {
+    "@swc-node/register": "^1.6.4",
     "@swc/core": "^1.3.53",
     "@types/babel__core": "^7.20.0",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.15.13",
+    "@types/react": "^18.0.38",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.39.0",
     "eslint-config-sukka": "^1.8.5",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "forgetti": "^0.4.2",
+    "memfs": "^3.5.1",
+    "mocha": "^10.2.0",
+    "mocha-chai-jest-snapshot": "^1.1.4",
     "rollup": "^3.20.7",
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-swc3": "^0.8.1",
+    "swc-loader": "^0.2.3",
     "webpack": "^5.80.0"
   },
   "peerDependencies": {
