--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "webpack": "^5.82.0"
   },
   "peerDependencies": {
-    "forgetti": "^0.4 || ^0.5"
+    "forgetti": "^0.4 || ^0.5 || ^0.6"
   },
   "engines": {
     "node": ">=16"
