--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/core": "^7.22.5"
   },
   "devDependencies": {
+    "@rspack/core": "^0.2.4",
     "@swc-node/register": "^1.6.6",
     "@swc/core": "^1.3.67",
     "@types/babel__core": "^7.20.1",
