--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "eslint": "^8.43.0",
     "eslint-config-sukka": "^1.8.6",
     "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "npm:eslint-plugin-i@^2.27.5-3",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
