--- a/package.json
+++ b/package.json
@@ -50,40 +50,37 @@
     "url": "https://github.com/SukkaW/forgetti-loader/issues"
   },
   "homepage": "https://github.com/SukkaW/forgetti-loader#readme",
-  "dependencies": {
-    "@babel/core": "^7.22.5"
-  },
   "devDependencies": {
-    "@rspack/core": "^0.2.4",
+    "@rspack/core": "^0.3.1",
     "@swc-node/register": "^1.6.6",
-    "@swc/core": "^1.3.67",
+    "@swc/core": "^1.3.82",
     "@types/babel__core": "^7.20.1",
-    "@types/chai": "^4.3.5",
+    "@types/chai": "^4.3.6",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18.16.18",
+    "@types/node": "^18.17.14",
     "@types/react": "^18.2.14",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "eslint": "^8.43.0",
-    "eslint-config-sukka": "^1.8.6",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "eslint": "^8.48.0",
+    "eslint-config-sukka": "^3.0.5",
     "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "npm:eslint-plugin-i@^2.27.5-3",
+    "eslint-plugin-import": "npm:eslint-plugin-i@^2.28.0-2",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "forgetti": "^0.6.2",
+    "forgetti": "^0.7.0",
     "memfs": "^4.2.0",
     "mocha": "^10.2.0",
     "mocha-chai-jest-snapshot": "^1.1.4",
     "next": "^13.4.7",
-    "rollup": "^3.25.3",
+    "rollup": "^3.28.1",
     "rollup-plugin-dts": "^5.3.0",
-    "rollup-plugin-swc3": "^0.8.2",
+    "rollup-plugin-swc3": "^0.10.1",
     "swc-loader": "^0.2.3",
     "webpack": "^5.88.1"
   },
   "peerDependencies": {
-    "forgetti": "^0.4 || ^0.5 || ^0.6"
+    "forgetti": "^0.7.0"
   },
   "engines": {
     "node": ">=16"
@@ -117,6 +114,10 @@
     "which-typed-array": "npm:@nolyfill/which-typed-array@latest",
     "es-iterator-helpers": "npm:@nolyfill/es-iterator-helpers@latest",
     "has-proto": "npm:@nolyfill/has-proto@latest",
-    "is-arguments": "npm:@nolyfill/is-arguments@latest"
+    "is-arguments": "npm:@nolyfill/is-arguments@latest",
+    "is-generator-function": "npm:@nolyfill/is-generator-function@latest"
+  },
+  "dependencies": {
+    "@babel/core": "^7.22.15"
   }
 }
