--- a/package.json
+++ b/package.json
@@ -51,17 +51,17 @@
   },
   "homepage": "https://github.com/SukkaW/forgetti-loader#readme",
   "devDependencies": {
-    "@rspack/core": "^0.3.1",
-    "@swc-node/register": "^1.6.6",
-    "@swc/core": "^1.3.82",
-    "@types/babel__core": "^7.20.1",
-    "@types/chai": "^4.3.6",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.17.14",
-    "@types/react": "^18.2.14",
+    "@rspack/core": "^0.3.10",
+    "@swc-node/register": "^1.6.8",
+    "@swc/core": "^1.3.96",
+    "@types/babel__core": "^7.20.4",
+    "@types/chai": "^4.3.9",
+    "@types/mocha": "^10.0.3",
+    "@types/node": "^18.18.8",
+    "@types/react": "^18.2.36",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
-    "eslint": "^8.48.0",
+    "eslint": "^8.53.0",
     "eslint-config-sukka": "^3.0.5",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "npm:eslint-plugin-i@^2.28.0-2",
@@ -69,15 +69,15 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "forgetti": "^0.7.2",
-    "memfs": "^4.2.0",
+    "memfs": "^4.6.0",
     "mocha": "^10.2.0",
     "mocha-chai-jest-snapshot": "^1.1.4",
-    "next": "^13.4.7",
-    "rollup": "^3.28.1",
-    "rollup-plugin-dts": "^5.3.0",
-    "rollup-plugin-swc3": "^0.10.1",
+    "next": "^14.0.1",
+    "rollup": "^4.3.0",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-swc3": "^0.10.3",
     "swc-loader": "^0.2.3",
-    "webpack": "^5.88.1"
+    "webpack": "^5.89.0"
   },
   "peerDependencies": {
     "forgetti": "^0.7.2"
@@ -86,6 +86,7 @@
     "node": ">=16"
   },
   "overrides": {
+    "rollup": "$rollup",
     "array-includes": "npm:@nolyfill/array-includes@latest",
     "array.prototype.flat": "npm:@nolyfill/array.prototype.flat@latest",
     "array.prototype.flatmap": "npm:@nolyfill/array.prototype.flatmap@latest",
@@ -118,6 +119,6 @@
     "is-generator-function": "npm:@nolyfill/is-generator-function@latest"
   },
   "dependencies": {
-    "@babel/core": "^7.22.15"
+    "@babel/core": "^7.23.2"
   }
 }
